--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,3 +1,33 @@
-<h3> <%= @question.title %> </h3>
-<br />
-<h4> <%= @question.description %> </h4>
+<h3><strong> <%= @question.title %> </strong></h3>
+<h5> <%= @question.description %> </h5>
+
+<%= link_to "Edit Question", edit_question_path, class: "button main" %>
+
+<%= link_to "Delete Question", @question, method: "delete", class: "button main"  %>
+
+<hr />
+
+<h4><strong>Answers From Other Users</strong></h4>
+
+  <ul class="main">
+    <% @answers.each do |answer| %>
+      <li>
+        <%= answer.description %>
+        <em><%= answer.created_at.strftime("%B %d %Y") %></em>
+      </li>
+    <% end %>
+  </ul>
+
+<hr />
+
+<h4><strong>Add An Answer</strong></h4>
+
+<div class="width">
+  <%= form_for [@question, @answer] do |f| %>
+    <%= f.label :description %>
+    <%= f.text_area :description %>
+
+    <%= f.submit class: "button" %>
+  <% end %>
+
+</div>
