--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,7 +1,7 @@
 <h3><strong> <%= @question.title %> </strong></h3>
 <h5> <%= @question.description %> </h5>
 
-<%= link_to "Edit Question", edit_question_path, class: "button main" %>
+<%= link_to "Edit Question", @question, class: "button main" %>
 
 <%= link_to "Delete Question", @question, method: "delete", class: "button main"  %>
 
